--- a/files/custom.css
+++ b/files/custom.css
@@ -1,24 +1,24 @@
-div[class^="flex-"] > div[class^="wrapper-"] {width: 125px;}
-div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] {width: 140px;}
-div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] {
+div[class^="layer-"] > div[class^="flex-"] > div[class^="wrapper-"] {width: 125px;}
+div[class^="layer-"] > div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] {width: 140px;}
+div[class^="layer-"] > div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] {
     display: flex;
     flex-flow: row wrap;
     padding-left: 0;
     align-content: flex-start;
 }
 
-div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] > div[class^="container-"] {
+div[class^="layer-"] > div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] > div[class^="container-"] {
     margin-left: 9px;
     margin-top: 0;
 }
 
-div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] > div[class*=" unread-"]::before {
+div[class^="layer-"] > div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] > div[class*=" unread-"]::before {
     left: -2px;
     top: 5px;
     z-index:9000;
 }
 
-div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] > div[class^="container-"]:first-child {
+div[class^="layer-"] > div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] > div[class^="container-"]:first-child {
     position: relative;
     left: 0;
     margin: auto;
@@ -37,33 +37,33 @@ div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div
     text-align: center;
 }
 
-div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] > div[class^="guildSeparator-"] {
+div[class^="layer-"] > div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] > div[class^="guildSeparator-"] {
     position: relative;
     width: 100%;
     margin-top: 10px;
 }
 
-div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] > div[class^="friendsOnline-"] {
+div[class^="layer-"] > div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] > div[class^="friendsOnline-"] {
     position: relative;
     width: 100%;
     margin: auto;
     margin-top: 5px;
 }
 
-div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] > div[class*=" selected-"]:before {
+div[class^="layer-"] > div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] > div[class*=" selected-"]:before {
     display: none;
 }
 
-div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] > div[class^="container-"] {
+div[class^="layer-"] > div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] > div[class^="container-"] {
     position: relative;
 }
 
-div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] > span[class^="dms-"] {
+div[class^="layer-"] > div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] > span[class^="dms-"] {
     width: 100%;
     display: flex;
     flex-flow: row wrap;
 }
 
-div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] > span[class^="dms-"] > span[class^="container-"] {
+div[class^="layer-"] > div[class^="flex-"] > div[class^="wrapper-"] > div[class^="scrollerWrap-"] > div[class^="scroller-"] > span[class^="dms-"] > span[class^="container-"] {
     left: 0;
 }
